# engenharia-software-pas

./: .gitignore  README.md
core/: .env.example  alembic.ini  pyproject.toml
core/app/api/: main.py
core/app/db/: database.py
core/app/models/: medical_specialty.py  transference_request.py
docs/: visao_componentes.md
ptm-center/: components.d.ts  index.html  package-lock.json  package.json
ptm-center/src/@core/components/webxr/: PatientAvatar.vue  XrButton.vue
ptm-center/src/layouts/components/: DrawerContent.vue  UserProfile.vue
ptm-center/src/pages/: index.vue  patients.vue  transfers.vue
ptm-center/src/pages/patients/[:id]/: avatar.vue  body.vue  (+2 more)
ptm-center/src/plugins/webxr/: scene.js  session-ar.js  session-vr.js  session.js
ptm-center/src/router/: index.js
tmp-webapp-xr/: package-lock.json
tmp-webapp-xr/src/assets/: main.css
tmp-webapp-xr/src/components/: PatientCard.vue  PatientClassify.vue
tmp-webapp-xr/src/components/icons/: mdi-square.vue
tmp-webapp-xr/src/js/: loader.js
tmp-webapp-xr/src/router/: index.js
tmp-webapp-xr/src/views/: HomeView.vue  SceneView.vue
webapp/: app.js  package-lock.json  package.json
webapp-xr/: README.md  package-lock.json  package.json
webapp-xr/src/: App.vue  main.js
webapp-xr/src/components/: SceneHome.vue  WebXR.vue
webapp-xr/src/js/: scene.js
webapp-xr/src/views/: HomeView.vue
webapp/app/: hello-webxr.js
webapp/public/javascripts/: hello-webxr.js
webapp/routes/: index.js  users.js
webapp/src/: app-xr.js
webapp/src/utils/: dom-utils.js
webapp/views/webxr/: hello-webxr.pug
(+5 files in other folders)
